--- a/css/responsive.css
+++ b/css/responsive.css
@@ -79,4 +79,24 @@
     padding: 19px 30px;
     text-align: center;
   }
+
+  /* Plants Lover  */
+  #plantsLover {
+    padding: 0 16px;
+    margin-top: 30px;
+  }
+  .plantsLover_wrapper {
+    flex-direction: column;
+    gap: 18px;
+  }
+  .plantsLover_right_content h3 {
+    font-size: 1.2rem;
+  }
+  .plantsLover_right_content li {
+    font-size: 14px;
+    margin-bottom: 16px;
+  }
+  .trusted_badge {
+    display: none;
+  }
 }
