Join section finised with responsive

--- a/css/style.css
+++ b/css/style.css
@@ -445,8 +445,59 @@ body {
 }
 
 /* ======= Deals  Section End Here =======  */
-/* ======= navbar Section Start  Here =======  */
-/* ======= navbar Section End Here =======  */
+/* ======= Join Section Start  Here =======  */
+.section_wrapper {
+  padding: 193px 0;
+  background: linear-gradient(
+      0deg,
+      rgba(7, 51, 79, 0.4) 0%,
+      rgba(7, 51, 79, 0.4) 100%
+    ),
+    url('../images/news-letter-bg.png') lightgray 50% / cover no-repeat;
+  text-align: center;
+}
+.section_wrapper h2 {
+  font-family: var(--font-noto);
+  font-size: 3.125rem;
+  color: var(--white-color);
+  font-weight: 700;
+  margin-bottom: 23px;
+}
+.input_field {
+  max-width: 830px;
+  margin: 0 auto;
+  position: relative;
+}
+.input_field input {
+  width: 100%;
+  padding: 19px 200px 19px 20px;
+  border: none;
+}
+input:focus {
+  outline: none;
+}
+input::placeholder {
+  font-family: var(--font-inter);
+  font-size: 1rem;
+  font-weight: 400;
+  color: var(--primary-text-color);
+}
+button {
+  padding: 17px 53.5px;
+  background-color: var(--orange-color);
+  border: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-family: var(--font-inter);
+  font-size: 1rem;
+  font-weight: 600;
+  color: var(--white-color);
+  line-height: normal;
+  white-space: nowrap;
+}
+
+/* ======= Join Section End Here =======  */
 /* ======= navbar Section Start  Here =======  */
 /* ======= navbar Section End Here =======  */
 /* ======= navbar Section Start  Here =======  */
