--- a/css/responsive.css
+++ b/css/responsive.css
@@ -136,4 +136,19 @@
   .image_item_right_content a {
     font-size: 20px;
   }
+  .section_wrapper {
+    padding: 110px 36px 65px 36px;
+  }
+  .section_wrapper h2 {
+    font-size: 20px;
+  }
+
+  input {
+    padding-right: 140px;
+  }
+
+  button {
+    padding: 19px 25px;
+    font-size: 0.9rem;
+  }
 }
