--- a/css/style.css
+++ b/css/style.css
@@ -480,7 +480,7 @@ input::placeholder {
   font-family: var(--font-inter);
   font-size: 1rem;
   font-weight: 400;
-  color: var(--primary-text-color);
+  color: rgba(0, 0, 0, 0.4);
 }
 button {
   padding: 17px 53.5px;
@@ -498,8 +498,52 @@ button {
 }
 
 /* ======= Join Section End Here =======  */
-/* ======= navbar Section Start  Here =======  */
-/* ======= navbar Section End Here =======  */
+/* ======= Footer Section Start  Here =======  */
+.footer_wrapper {
+  padding: 50px 0;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  gap: 20px;
+}
+.footer_link_section {
+  display: flex;
+  justify-content: space-between;
+}
+.footer_logo_section {
+  max-width: 359px;
+}
+.footer_logo_section p {
+  font-family: var(--font-inter);
+  font-size: 22px;
+  font-weight: 400;
+  line-height: normal;
+  margin-top: 16px;
+  color: var(--paragraph-color);
+}
+.link_one,
+.link_two {
+  display: flex;
+  gap: 32px;
+  flex-direction: column;
+}
+.footer_icon_section {
+  display: inline;
+}
+.footer_icon_section img {
+  margin-left: 24px;
+}
+.link_one,
+.link_two li {
+  font-size: 1rem;
+  font-weight: 400;
+  color: #6b7280;
+}
+.link_one a,
+.link_two a {
+  color: #6b7280;
+}
+/* ======= Footer Section End Here =======  */
 /* ======= navbar Section Start  Here =======  */
 /* ======= navbar Section End Here =======  */
 /* ======= navbar Section Start  Here =======  */
